--- a/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
+++ b/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
@@ -72,10 +72,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BMIBFIForm.Designer.vb">
-      <DependentUpon>BMIBFIForm.vb</DependentUpon>
+    <Compile Include="BMIForm.Designer.vb">
+      <DependentUpon>BMIForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="BMIBFIForm.vb">
+    <Compile Include="BMIForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CaloriesCalculatorForm.Designer.vb">
@@ -120,8 +120,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="BMIBFIForm.resx">
-      <DependentUpon>BMIBFIForm.vb</DependentUpon>
+    <EmbeddedResource Include="BMIForm.resx">
+      <DependentUpon>BMIForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CaloriesCalculatorForm.resx">
       <DependentUpon>CaloriesCalculatorForm.vb</DependentUpon>
