The Calorie count form is functional now. Two classes were added to and some controls were added to the form.

--- a/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
+++ b/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
@@ -84,6 +84,8 @@
     <Compile Include="CaloriesCalculatorForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Excercise.vb" />
+    <Compile Include="Food.vb" />
     <Compile Include="UserInputForm.vb">
       <SubType>Form</SubType>
     </Compile>
