--- a/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
+++ b/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
@@ -99,6 +99,7 @@
     <Compile Include="CaloriesCalculatorForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="DailyWeight.vb" />
     <Compile Include="Excercise.vb" />
     <Compile Include="Food.vb" />
     <Compile Include="UserInputForm.vb">
