The Delete all function works correctly now. No other know issues at the moment.

--- a/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
+++ b/FinalProject_FT_MichaelKosar/FinalProject_FT_MichaelKosar.vbproj
@@ -135,6 +135,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>WeightTrackerDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="WeightTrackerDataSet.vb">
+      <DependentUpon>WeightTrackerDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="WeightTrackerForm.Designer.vb">
       <DependentUpon>WeightTrackerForm.vb</DependentUpon>
     </Compile>
